<resources>
    <string name="app_name">RamHack</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="accthint">Make an Account</string>
    <string name="productname">Name of Product</string>
    <string name="productprice">Price of Product</string>
    <string name="producttype">Category of Product</string>
    <string name="results">See Results</string>
    <string name="anotherproduct">Check Another Product</string>
    <string name="linktoank">See you bank Account</string>
    <string name="loginhint">Email Address</string>
    <string name="passwordhint">8 character min</string>
    <string name="result">This is a bad purchase</string>
    <string name="result2">You are high risk</string>
    <string name="result3">You have bigger things to worry about</string>
</resources>
